--- a/po/wesnoth-thot/cs.po
+++ b/po/wesnoth-thot/cs.po
@@ -13,8 +13,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Battle for Wesnoth\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2011-11-16 12:43+0100\n"
-"PO-Revision-Date: 2011-03-12 20:04+0100\n"
+"POT-Creation-Date: 2011-11-23 15:01+0100\n"
+"PO-Revision-Date: 2011-11-22 20:21+0100\n"
 "Last-Translator: VladimírSlávik <slavik.vladimir@nospam@seznam.cz>\n"
 "Language-Team: Czech <wesnoth-cs-l@nospam.buchtovi.cz>\n"
 "Language: cs\n"
@@ -2679,19 +2679,18 @@ msgstr ""
 "honosí, proti ní samé. Osoba dohlížitele požívá posvátné úcty a dohlížitel "
 "často zprostředkovává roli vyslance mezi trpasličími klany."
 
+# | msgid ""
+# | "The presence of this unit inspires own units next to it to deal more "
+# | "damage in combat, though this only applies to units of lower or equal "
+# | "level."
 #: data/campaigns/The_Hammer_of_Thursagan/utils/abilities.cfg:4
-#, fuzzy
-#| msgid ""
-#| "The presence of this unit inspires own units next to it to deal more "
-#| "damage in combat, though this only applies to units of lower or equal "
-#| "level."
 msgid ""
 " The presence of this unit inspires own units next to it to deal more damage "
 "in combat, though this only applies to units of lower or equal level."
 msgstr ""
-"Přítomnost této jednotky inspiruje sousedící spřátelené jednotky, které díky "
-"tomu způsobují svými útoky větší poškození. To však platí pouze pro jednotky "
-"na nižší nebo stejné úrovni."
+" Přítomnost této jednotky inspiruje sousedící spřátelené jednotky, které "
+"díky tomu způsobují svými útoky větší poškození. To však platí pouze pro "
+"jednotky na nižší nebo stejné úrovni."
 
 #. [leadership]: id=inspire_0
 #: data/campaigns/The_Hammer_of_Thursagan/utils/abilities.cfg:13
@@ -2799,28 +2798,3 @@ msgid ""
 "darkness!"
 msgstr ""
 "Argh! Umírám, ale oheň spravedlnosti vás i tak všechny smete do temnot!"
-
-#~ msgid "Dwarvish Runemaster"
-#~ msgstr "Maskovaný trpasličí mistr run"
-
-#~ msgid ""
-#~ "Except for those with almost supernatural skill, the highest rank a "
-#~ "runecrafter can rise to is that of the Dwarvish Runemaster. Striking "
-#~ "blows nearly as powerful as those of the best warriors, they would be "
-#~ "fearsome without their craft, but with it they are also nigh on "
-#~ "invincible, since their runes cause the physical blows of their enemies "
-#~ "to deal less damage than would be expected."
-#~ msgstr ""
-#~ "Kromě výjimečných jednotlivců ovládajících nadpřirozené dovednosti je "
-#~ "Mistr run nejvyšší hodností, jíž mohou dosáhnout ti, kteří ovládají "
-#~ "runová umění. Mistři run jsou schopni udeřit protivníky takřka stejně "
-#~ "silně jako ti nejlepší válečníci a mohou tak být obávanými protivníky i "
-#~ "bez užití svého umění. S ním se však stávají takřka neporazitelnými, "
-#~ "neboť jejich runy působí fyzická zranění jejich nepřátelům, zatímco sami "
-#~ "jsou zraňováni méně, než by se dalo očekávat."
-
-#~ msgid "hammer"
-#~ msgstr "kladivo"
-
-#~ msgid "chill tempest"
-#~ msgstr "mrazivá bouře"
