--- a/po/wesnoth-units/cs.po
+++ b/po/wesnoth-units/cs.po
@@ -14,8 +14,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Battle for Wesnoth\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2011-11-07 17:23+0100\n"
-"PO-Revision-Date: 2011-09-14 22:27+0100\n"
+"POT-Creation-Date: 2011-11-23 15:01+0100\n"
+"PO-Revision-Date: 2011-11-22 20:11+0100\n"
 "Last-Translator: VladimírSlávik <slavik.vladimir@nospam@seznam.cz>\n"
 "Language-Team: Czech <wesnoth-cs-l@nospam.buchtovi.cz>\n"
 "Language: cs\n"
@@ -27,20 +27,19 @@ msgstr ""
 "X-Poedit-Country: CZECH REPUBLIC\n"
 "X-Poedit-Basepath: D:\\Dev\\wesnoth-trunk\n"
 
+# | msgid ""
+# | "It is not clear why the Dragonguards are called what they are, a name "
+# | "given by their dwarven brethren. Some speculate that the name comes from "
+# | "their weapon of choice, these strange staffs that belch fire and death. "
+# | "Others have surmised that it is because such weapons would be a threat "
+# | "against even a true Dragon, should such a thing be seen again in the "
+# | "known world. Whatever the case, it is for these weapons that the "
+# | "guardians of the great Dwarven citadels are both renowned and feared; "
+# | "weapons that have broken the mightiest of warriors with a single blow."
 #. [unit_type]: id=Dwarvish Dragonguard, race=dwarf
 #. [unit_type]: id=Dwarvish Masked Dragonguard, race=dwarf
 #: data/campaigns/The_Hammer_of_Thursagan/units/Dwarvish_Masked_Dragonguard.cfg:18
 #: data/core/units/dwarves/Dragonguard.cfg:20
-#, fuzzy
-#| msgid ""
-#| "It is not clear why the Dragonguards are called what they are, a name "
-#| "given by their dwarven brethren. Some speculate that the name comes from "
-#| "their weapon of choice, these strange staffs that belch fire and death. "
-#| "Others have surmised that it is because such weapons would be a threat "
-#| "against even a true Dragon, should such a thing be seen again in the "
-#| "known world. Whatever the case, it is for these weapons that the "
-#| "guardians of the great Dwarven citadels are both renowned and feared; "
-#| "weapons that have broken the mightiest of warriors with a single blow."
 msgid ""
 "It is not clear why the Dragonguards are called what they are, a name given "
 "by their dwarven brethren. Some speculate that the name comes from their "
@@ -56,7 +55,7 @@ msgstr ""
 "jejich volbou zbraně. Tyto divné hole chrlí oheň a smrt. Jiní se naopak "
 "domnívají, že jméno pochází z možnosti, že právě takováto zbraň může být "
 "hrozbou proti skutečným drakům, kdyby snad byli ještě někdy spatřeni. V "
-"každém případě, je to kvůli těmto zbraním, díky jejichž používání je tato "
+"každém případě je to kvůli těmto zbraním, díky jejichž používání je tato "
 "stráž velkých trpasličích pevností proslulá a tolik obávaná."
 
 #. [attack]: type=blade
@@ -264,23 +263,22 @@ msgstr ""
 msgid "thunderstick"
 msgstr "hromová hůl"
 
+# | msgid ""
+# | "The Dwarven Thunderguards are famed for their curious weaponry, these "
+# | "strange staffs of wood and iron that make a thunderous noise in their "
+# | "anger. The machinations behind this weaponry are a mystery, a secret "
+# | "taken to the grave by the dwarves of Knalga who wield them, and are "
+# | "assumed to have even forged them. The most that is known are reports of "
+# | "dwarves pouring a strange black dust into the mouth of their weapons, "
+# | "which some say is a food to fuel the beast imprisoned within.\n"
+# | "\n"
+# | "Though a single shot from these ‘thundersticks’ can take several minutes "
+# | "to prepare, the results are seen by the Dwarves as being well worth the "
+# | "wait."
 #. [unit_type]: id=Dwarvish Thunderguard, race=dwarf
 #. [unit_type]: id=Dwarvish Masked Thunderguard, race=dwarf
 #: data/campaigns/The_Hammer_of_Thursagan/units/Dwarvish_Masked_Thunderguard.cfg:21
 #: data/core/units/dwarves/Thunderguard.cfg:21
-#, fuzzy
-#| msgid ""
-#| "The Dwarven Thunderguards are famed for their curious weaponry, these "
-#| "strange staffs of wood and iron that make a thunderous noise in their "
-#| "anger. The machinations behind this weaponry are a mystery, a secret "
-#| "taken to the grave by the dwarves of Knalga who wield them, and are "
-#| "assumed to have even forged them. The most that is known are reports of "
-#| "dwarves pouring a strange black dust into the mouth of their weapons, "
-#| "which some say is a food to fuel the beast imprisoned within.\n"
-#| "\n"
-#| "Though a single shot from these ‘thundersticks’ can take several minutes "
-#| "to prepare, the results are seen by the Dwarves as being well worth the "
-#| "wait."
 msgid ""
 "The Dwarven Thunderguards are famed for their curious weaponry, these "
 "strange staves of wood and iron that make a thunderous noise in their anger. "
@@ -294,11 +292,11 @@ msgid ""
 "prepare, the results are seen by the Dwarves as being well worth the wait."
 msgstr ""
 "Trpasličí hromová stráž je proslulá pro své zvláštní zbraně, podivné hole ze "
-"dřeva a železa dělající ohlušující rámus. Způsob fungování těchto zbraní je "
-"zahalen tajemstvím, které si trpaslíci Knalgy, kteří je ovládají a nejspíš i "
-"vyrábějí, berou do hrobu. Neví se víc, než jen to, že trpaslíci do hlavní "
-"svých zbraní sypají černý prach, o němž říkají, že je potravou pro pohyb "
-"bestie uvězněné uvnitř.\n"
+"dřeva a železa vydávající při boji ohlušující rámus. Způsob fungování těchto "
+"zbraní je zahalen tajemstvím, které si trpaslíci Knalgy, kteří je ovládají a "
+"nejspíš i vyrábějí, berou do hrobu. Neví se víc, než jen to, že trpaslíci do "
+"hlavní svých zbraní sypají černý prach, o němž říkají, že je potravou pro "
+"pohyb bestie uvězněné uvnitř.\n"
 "\n"
 "Ačkoliv příprava na jediný výstřel z těchto „hromových holí“ může zabrat "
 "několik minut, výsledek za tu námahu určitě stojí."
@@ -5420,195 +5418,3 @@ msgstr ""
 #~ "opevněným pozicím nepřítele. Díky své statečnosti a dovednému ovládání "
 #~ "meče jsou schopni v těchto bojích prorazit do linií, které vypadaly "
 #~ "neproniknutelně."
-
-# | msgid "longsword"
-#~ msgid "long sword"
-#~ msgstr "dlouhý meč"
-
-#~ msgid "Batal"
-#~ msgstr "Batal"
-
-#~ msgid "There is currently no description available for this unit."
-#~ msgstr "Jednotka zatím nemá popis."
-
-#~ msgid "composite bow"
-#~ msgstr "kompozitní luk"
-
-# | msgid "Elder Mage"
-#~ msgid "Elder Falcon"
-#~ msgstr "Starý sokol"
-
-#~ msgid ""
-#~ "These falcons have been through many perils and somehow managed to "
-#~ "survive them. Their dives can be so fast that stories abound of them "
-#~ "taking a foe’s head clean off."
-#~ msgstr ""
-#~ "Tito sokoli prošli mnoha nebezpečími a nějak se jim podařilo přežít. "
-#~ "Jejich střemhlavé útoky můžou být tak prudké, že se vypráví historky o "
-#~ "tom, jak oběti svého útoku urazili hlavu."
-
-#~ msgid "beak"
-#~ msgstr "zobák"
-
-#~ msgid "Falcon"
-#~ msgstr "Sokol"
-
-#~ msgid "Faris"
-#~ msgstr "Faris"
-
-#~ msgid "Ghazi"
-#~ msgstr "Ghazi"
-
-#~ msgid "shield bash"
-#~ msgstr "úder štítem"
-
-#~ msgid "Hadaf"
-#~ msgstr "Hadaf"
-
-#~ msgid "Hakim"
-#~ msgstr "Hakim"
-
-#~ msgid ""
-#~ "Hakim use their knowledge of ancient medicine and herbal concoctions to "
-#~ "quickly bring the Khalifate soldiers back to the front lines."
-#~ msgstr ""
-#~ "Hakimové využívají své starodávné vědomosti o medicíně a manipulace s "
-#~ "rostlinami k rychlému obnovení bojeschopnosti vojáků kalifských vojsk."
-
-#~ msgid "Jawal"
-#~ msgstr "Javal"
-
-#~ msgid ""
-#~ "Jawal are excellent horsemen and few can shoot as well from horseback as "
-#~ "they. They love to circle and harass enemies from afar while using their "
-#~ "superior speed to avoid heavy counter attack.."
-#~ msgstr ""
-#~ "Javalové jsou vynikající jezdci, kteří umí střílet ze sedla koně jako "
-#~ "málokdo. Vyžívají se v rychlém objíždění a obtěžování nepřátel zdálky, "
-#~ "kdy využívají svou skvělou rychlost k úniku před většími protiútoky "
-#~ "nepřátel."
-
-#~ msgid "cavalry sword"
-#~ msgstr "jezdecký meč"
-
-#~ msgid "Jundi"
-#~ msgstr "Jundi"
-
-#~ msgid ""
-#~ "The Khalifate uses these Hillmen as their foot force. They are versatile "
-#~ "and excel in hilly terrain."
-#~ msgstr ""
-#~ "Kalifové využívají tyto horaly jako pěší vojska. Jsou to všestraní "
-#~ "vojáci, kteří dobře bojují v kopcovitém terénu."
-
-#~ msgid "Khaiyal"
-#~ msgstr "Kajal"
-
-# sám originál je trochu kostrbatější
-#~ msgid ""
-#~ "The Khaiyal wear truly heavy armor, and thus close with a single high "
-#~ "impact lance charge in order to save their poor horses’ stamina before "
-#~ "switching over to their trusty maces."
-#~ msgstr ""
-#~ "Kajalové nosí opravdu těžké brnění a tak po silnému výpadu kopím, který "
-#~ "je vyčerpávající i pro jejich koně, sahají při boji zblízka po palcátech. "
-#~ "Ty pak jistě a spolehlivě ovládají."
-
-#~ msgid "Khalid"
-#~ msgstr "Khalid"
-
-#~ msgid "Mighwar"
-#~ msgstr "Maigvar"
-
-#~ msgid "Monawish"
-#~ msgstr "Monaviš"
-
-#~ msgid "Mudafi"
-#~ msgstr "Mudafi"
-
-#~ msgid "Mufariq"
-#~ msgstr "Mufarik"
-
-#~ msgid "Muharib"
-#~ msgstr "Muharib"
-
-#~ msgid "Naffat"
-#~ msgstr "Naftun"
-
-#~ msgid ""
-#~ "Naffat frequently use burning arrows to set fire to enemy fortifications "
-#~ "and generally sow terror amongst the enemy. Such tactics may also have "
-#~ "other uses in a land of many strange wonders..."
-#~ msgstr ""
-#~ "Střílejíce zápalné šípy do nepřátelských opevnění, rozsévají Naftunové "
-#~ "často zkázu v řadách nepřátel. Tato taktika může mít také další uplatnění "
-#~ "v zemi mnoha zvláštních divů..."
-
-# nejspíš
-#~ msgid "naphtha attack"
-#~ msgstr "hořící nafta"
-
-#~ msgid "fire arrow"
-#~ msgstr "ohnivý šíp"
-
-#~ msgid "Qanas"
-#~ msgstr "Qanas"
-
-#~ msgid "Qatif-al-nar"
-#~ msgstr "Qatif al Nar"
-
-#~ msgid "Rami"
-#~ msgstr "Rami"
-
-#~ msgid ""
-#~ "Rami are excellent horsemen and few can shoot as well from horseback as "
-#~ "they. They love to circle and harass enemies from afar while using their "
-#~ "superior speed to avoid heavy counter attack.."
-#~ msgstr ""
-#~ "Ramiové jsou vynikající jezdci, kteří umí střílet ze sedla koně jako "
-#~ "málokdo. Vyžívají se v rychlém objíždění a obtěžování nepřátel zdálky, "
-#~ "kdy využívají svou skvělou rychlost k úniku před většími protiútoky "
-#~ "nepřátel."
-
-#~ msgid "Rasikh"
-#~ msgstr "Rakiš"
-
-#~ msgid "Saree"
-#~ msgstr "Sari"
-
-#~ msgid ""
-#~ "Saree are excellent horsemen and few can shoot as well from horseback as "
-#~ "they. They love to circle and harass enemies from afar while using their "
-#~ "superior speed to avoid heavy counter attack.."
-#~ msgstr ""
-#~ "Sariové jsou vynikající jezdci, kteří umí střílet ze sedla koně jako "
-#~ "málokdo. Vyžívají se v rychlém objíždění a obtěžování nepřátel zdálky, "
-#~ "kdy využívají svou skvělou rychlost k úniku před většími protiútoky "
-#~ "nepřátel."
-
-#~ msgid "Shuja"
-#~ msgstr "Šuja"
-
-#~ msgid "Tabib"
-#~ msgstr "Tabib"
-
-#~ msgid "Tineen"
-#~ msgstr "Tinin"
-
-#~ msgid ""
-#~ "Dwarven magic most often manifests itself by the inscription of runes in "
-#~ "the surface of an object, which by their mere presence somehow imbue it "
-#~ "with power. Though rarely seen in combat, a master of these runes can put "
-#~ "them to terrifying use."
-#~ msgstr ""
-#~ "Trpasličí magie, alespoň v rozsahu, co je o ní známo, se nejčastěji "
-#~ "představuje runovými nápisy do povrchů objektů, přičemž tyto nápisy "
-#~ "pouhou svojí přítomností naplní daný objekt magickou silou. Ačkoli v boji "
-#~ "je tato magie viděna jen velice zřídka, mistr v používaní run je může "
-#~ "použít k hrůzostrašným účelům."
-
-#~ msgid "runic hammer"
-#~ msgstr "runové kladivo"
-
-#~ msgid "lightning bolt"
-#~ msgstr "hromový úder"
