--- a/po/wesnoth-utbs/cs.po
+++ b/po/wesnoth-utbs/cs.po
@@ -13,8 +13,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Battle for Wesnoth\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2011-11-07 17:23+0100\n"
-"PO-Revision-Date: 2011-09-14 22:41+0100\n"
+"POT-Creation-Date: 2011-11-23 15:01+0100\n"
+"PO-Revision-Date: 2011-11-27 13:11+0100\n"
 "Last-Translator: VladimírSlávik <slavik.vladimir@nospam@seznam.cz>\n"
 "Language-Team: Czech <wesnoth-cs-l@nospam.buchtovi.cz>\n"
 "Language: cs\n"
@@ -1435,7 +1435,6 @@ msgstr ""
 
 #. [message]: speaker=Zhul
 #: data/campaigns/Under_the_Burning_Suns/scenarios/02_Across_the_Harsh_Sands.cfg:773
-#, fuzzy
 msgid "Nym! No! Don’t open—"
 msgstr "Nym! Ne, neotevírej to..."
 
@@ -3967,7 +3966,6 @@ msgstr ""
 
 #. [message]: speaker=Thungar
 #: data/campaigns/Under_the_Burning_Suns/scenarios/05_A_Subterranean_Struggle.cfg:1047
-#, fuzzy
 msgid "Nasty dwarves and stinkin’ elves, we will smash you all!"
 msgstr "Hnusní trpaslíci a smradlaví elfové, všechny vás pobijeme!"
 
@@ -4394,26 +4392,24 @@ msgstr ""
 "Pche! Jste všichni stejní. Nikdo nemá rád trolly. Ale uvidíte, Grišnák vás "
 "všechny zahubí."
 
+# | msgid "Defeat Troll Leaders"
 #. [objective]: condition=win
 #: data/campaigns/Under_the_Burning_Suns/scenarios/05_A_Subterranean_Struggle.cfg:1719
 #, fuzzy
-#| msgid "Defeat Troll Leaders"
 msgid "Defeat troll leaders"
 msgstr "Poraz trollí vůdce"
 
+# | msgid "Death of Zhul"
 #. [objective]: condition=lose
 #: data/campaigns/Under_the_Burning_Suns/scenarios/05_A_Subterranean_Struggle.cfg:1735
-#, fuzzy
-#| msgid "Death of Zhul"
 msgid "Death of Fundin"
-msgstr "Zhul zemře"
+msgstr "Fundin zemře"
 
+# | msgid "Death of Nog"
 #. [objective]: condition=lose
 #: data/campaigns/Under_the_Burning_Suns/scenarios/05_A_Subterranean_Struggle.cfg:1739
-#, fuzzy
-#| msgid "Death of Nog"
 msgid "Death of Nori"
-msgstr "Nog zemře"
+msgstr "Nori zemře"
 
 #. [option]: speaker=$explorer.id
 #: data/campaigns/Under_the_Burning_Suns/scenarios/05_A_Subterranean_Struggle.cfg:1752
@@ -4429,26 +4425,23 @@ msgstr ""
 "Věděl jsem, že se elfům nedá věřit. Hloupý chlapče, budeš litovat svou "
 "zradu. Okus trpasličí ocel!"
 
+# | msgid "Defeat Dwarf Leaders"
 #. [objective]: condition=win
 #: data/campaigns/Under_the_Burning_Suns/scenarios/05_A_Subterranean_Struggle.cfg:1784
-#, fuzzy
-#| msgid "Defeat Dwarf Leaders"
 msgid "Defeat dwarf leaders"
 msgstr "Poraz trpasličí vůdce"
 
+# | msgid "Death of Zhul"
 #. [objective]: condition=lose
 #: data/campaigns/Under_the_Burning_Suns/scenarios/05_A_Subterranean_Struggle.cfg:1800
-#, fuzzy
-#| msgid "Death of Zhul"
 msgid "Death of Thungar"
-msgstr "Zhul zemře"
+msgstr "Thungar zemře"
 
+# | msgid "Death of Jarl"
 #. [objective]: condition=lose
 #: data/campaigns/Under_the_Burning_Suns/scenarios/05_A_Subterranean_Struggle.cfg:1804
-#, fuzzy
-#| msgid "Death of Jarl"
 msgid "Death of Gnarl"
-msgstr "Jarl zemře"
+msgstr "Gnarl zemře"
 
 #. [message]: speaker=$explorer.id
 #: data/campaigns/Under_the_Burning_Suns/scenarios/05_A_Subterranean_Struggle.cfg:1826
@@ -16327,10 +16320,10 @@ msgstr "žízeň"
 msgid "refreshed"
 msgstr "osvěžený"
 
+# | msgid "female^Desert Hunter"
 #. [set_variable]
 #: data/campaigns/Under_the_Burning_Suns/utils/kaleh-abilities.cfg:36
 #, fuzzy
-#| msgid "female^Desert Hunter"
 msgid "female^stunned"
 msgstr "Pouštní lovkyně"
 
