--- a/po/wesnoth-utbs/fr.po
+++ b/po/wesnoth-utbs/fr.po
@@ -53,7 +53,7 @@ msgstr "Sentinelle du désert"
 #. [campaign]: id=Under_the_Burning_Suns
 #: data/campaigns/Under_the_Burning_Suns/_main.cfg:21
 msgid "(Nightmare)"
-msgstr "(cauchemardesque)"
+msgstr "(Cauchemardesque)"
 
 #. [unit_type]: id=Desert Prowler, race=elf
 #. [campaign]: id=Under_the_Burning_Suns
